[package]
name = "wide-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
config = { version = "0.14.0", features = ["json"] }
ctrlc = "3.4.4"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rust_decimal = "1.35.0"
serde_json = "1.0.117"
sha2 = "0.10.8"
websocket = "0.27.1"
